src/test/ui/parser/issues/issue-62546.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62546.rs:2:52
   |
LL | pub t(#
   |      - unclosed delimiter
LL |
   |                                                    ^

error: aborting due to previous error

